--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -3,7 +3,7 @@
 
 {% block  content %}
 
-    <p><a href="{% url 'blog:home' %}">Visite the blog</a></p>
+    <p><a href="{% url 'home' %}">Visite the blog</a></p>
     
 
 {% endblock  %}
